list.css
/*스크롤바 커스텀*/
html::-webkit-scrollbar {
  width: 17px;
}

html::-webkit-scrollbar-track {
  background: #f2f2f2;
}

html::-webkit-scrollbar-thumb {
  background: #79d58f;
  /* 스크롤바 색깔 */
  background-clip: padding-box;
  border: 3px solid transparent;
  border-radius: 8px;
  height: 1%;
}

body {
  position: relative;
  width: 350px;
  height: auto;
  padding: 0px;
  margin: 0px;

  /* background: rgba(244, 244, 244, 0.7); */
  /* 여전히 고민 중 */

  /* 불투명도 확인하려고 넣어본 테스트용 백그라운드이미지 */
  /* background-image: url(../화면\ 캡처\ 2023-02-03\ 033610.jpg); */
}

.wrap {
  position: relative;
  width: 320px;
  /* height: auto; */
  min-height: 100vh;
  /* vh -> 뷰포트 높이 : 사용자 뷰의 100퍼센트 */

  padding: 25px 15px;
  margin-bottom: 50px;
  background: rgba(244, 244, 244, 0.7);
}

.dir {
  display: flex;
  position: relative;
  width: 304px;
  min-height: 60px;
  height: auto;
  /* width는 컨텐트 기준.. 패딩 계산  */

  padding-left: 16px;
  margin: 0px;

  background: #ffffff;
  border-radius: 20px;
}

/* dir 이름 길어졌을 때 어떻게 처리할지 얘기 안 함 */
.dir-text {
  height: 60px;

  margin: 0px;
  color: #000000;
  font-weight: 800;
  /* 피그마 폰트 웨이트는 800설정인데 그대로 해도 느낌이 다른데.. */
  line-height: 60px;
  /* font-size: 32px; */
  /* 피그마에서는 32px던데.. 적용하니까 너무 큰데????? */

  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.dir-title {
  /* overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis; */
}

.dir-list {
  margin-bottom: 9px;

  /* 일단 잘리게 해놨는데 어떻게 할지 고민 */
  /* overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis; */
}

#reload {
  width: 30px;
  height: 30px;
  border-radius: 20px;
  margin-block: auto;
  margin-right: 10px;
}

#reload:hover {
  background-color: #f2f2f2;
}

#button-reload {
  width: 20px;
  height: 20px;
  cursor: pointer;
  padding: 5px;
}

#tooltip-reload {
  width: 45px;
  left: 10px;
}

.keyword-box {
  position: relative;
  width: 304px;

  margin-top: 20px;
  margin-bottom: 14px;
  padding-top: 12px;
  padding-bottom: 12px;
  padding-left: 16px;

  background: #34a853;
  border-radius: 15px;
  /* 키워드 박스만 border-radius: 15px; 인 이유가 있겠지??*/
}

.keyword-box:hover {
  background: #2F954A;
}

.keyword {
  display: inline-block;
  margin: 0px 35px 0px 0px;
  font-size: 18px;
  font-weight: 600;
  line-height: 25px;
  color: #ffffff;
  cursor: pointer;
}

.menubar {
  display: inline-block;
  cursor: pointer;
  margin-top:3px;
  margin-bottom:21px;
}

.menubar.active {
  left: 95px;
}

@keyframes ul_fadeIn {
  0% {
    opacity: 0;
    transform: translate3d(100%, 0, 0);
  }

  to {
    opacity: 1;
    transform: translate3d(0, 0, 0);
  }
}

@keyframes ul_fadeOut {
  0% {
    opacity: 1;
    transform: translate3d(-100%, 0, 0);
  }

  to {
    opacity: 0;
    transform: translate3d(0, 0, 0);
  }
}

@keyframes menubar_fadeIn {
  0% {
    transform: translate3d(75px, 0, 0);
  }

  to {
    transform: translate3d(0, 0, 0);
  }
}

@keyframes menubar_fadeOut {
  0% {
    transform: translate3d(-80px, 0, 0);
  }

  to {
    transform: translate3d(0, 0, 0);
  }
}

.wrap .path-box .menubar>ul {
  background: #bdbebd;
  display: none;
  /* height: 92.8px; */
  padding: 0;
  margin: 0;
  border: 0;
  position: absolute;
  width: 75px;
  z-index: 200;
  top: 0px;
  right: 100%;
  border-radius: 15px;
}

.wrap .path-box .title.active {
  width: 175px;
}

.wrap .path-box .title.inactive {
  width: 260px;
}

.wrap .path-box .menubar.active img {
  position: relative;
  right: 80px;
  animation: menubar_fadeIn 0.5s;
}

.wrap .path-box .menubar.inactive img {
  position: relative;
  left: 0;
  animation: menubar_fadeOut 0.5s;
}

.wrap .path-box .menubar.active>ul {
  display: block;
  right:0px;
  animation: ul_fadeIn 0.5s;
}

.wrap .path-box .menubar.inactive>ul {
  display: block;
  left: 100%;
  animation: ul_fadeOut 0.5s;
}

.wrap .path-box .path.active {
  width: 170px;
}

.wrap .path-box .path.inactive  {
  width: 263px;
}

.wrap .path-box .menubar.active ~ img{
  position:relative;
  right: 80px;
  animation: menubar_fadeIn 0.5s;
}

.wrap .path-box .menubar.inactive ~ img{
  position:relative;
  left: 0;
  animation: menubar_fadeOut 0.5s;
}

.wrap .path-box .menubar li {
  height: 25px;
  padding-top: 2px;
  padding-bottom: 2px;
  text-align: center;
  color: black;
  font-size: small;
}

.menubar li:hover {
  background-color: #dedede;
  font-weight: bold;
}

.white-menu1 {
  border-radius: 15px 15px 0 0;
}

.white-menu3 {
  border-radius: 0 0 15px 15px;
}

.menu_white {
  width: 16px;
  height: auto;
  right: 10px;
}

@keyframes toggleRotateH {
  0% {
    transform: translate3d(0, 0, 0);
  }

  to {
    transform: rotate(-90deg);
  }
}

@keyframes toggleRotateS {
  0% {
    transform: rotate(-90deg);
  }

  to {
    transform: translateZ(0);
  }
}

.toggle_keyword {
  position: absolute;
  margin-top: -7px;
  /* 이미지 높이의 절반값 */
  top: 50%;
  right: 16px;
  cursor: pointer;
}

.toggleHidden {
  animation: toggleRotateH 0.5s;
  transform: rotate(-90deg);
}

.toggleShown {
  animation: toggleRotateS 0.5s;
  transform: rotate(0);
}

.path-box {
  display: inline-flex;
  position: relative;

  width: 304px;
  height: auto;

  margin-bottom: 10px;
  padding-top: 18px;
  padding-left: 16px;

  background: #ffffff;
  border-radius: 20px;
}

.pathBox-right{
  padding-right: 4%;
}

li {
  list-style-type: none;
}

a {
  height: 51px;

  text-decoration: none;
  color: #4f4f4f;
  font-size: 14px;
  vertical-align: middle;
  /* line-height: 17px; */
}

/* 페이지 제목과 링크는 길이 넘어가면 자동 숨김처리 함 */
/* 넘친 부분에 대해서 마우스 오버시 보이게 하기 등의 조작 필요 */
a>h3 {
  display: inline-block;
  width: 260px;
  height: 21.6px;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  margin: 0px;
}

.title {
  transition: width 0.5s ease;
}

a>p {
  text-decoration: underline;

  width: 288px;
  height: 21.6px;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}


#dirAddButton {
  position: relative;
  width: 304px;

  margin-bottom: 23px;
  padding-top: 12px;
  padding-bottom: 12px;
  padding-left: 16px;

  background: #34a853;
  border-radius: 15px;
}

#dirAddButton>h2 {
  margin: 0px;

  font-size: 18px;
  color: #ffffff;
  cursor: pointer;
}

/* 
.input_dir {
  display: none;
} */

.button-edit {
  cursor: pointer;
  height:24px;
}

.button-del {
  cursor: pointer;
  height:24px;
}

/* style.css */
.input-dir {
  width: 95%;
  border: none;
  border-bottom: 2px solid #333;
  font-size: 1rem;
  font-family: inherit;
  font-weight: inherit;
  margin-top: 1rem;
  margin-bottom: 1rem;
  padding-bottom: 0.5rem;
  outline: none;
}

footer {
  position: fixed;
  /* width: inherit; */
  /* vscode로 봤을 땐 바디 자체가 350px로 잘 잡혀서 괜찮았는데..
  새창으로 볼 땐 오류나서 일단 수정
  나중에 플러그인으로 들어갈 땐 괜찮은지 확인 후 코드 수정 */
  width: 350px;
  height: 75px;
  bottom: 0px;

  margin: 0px;
  padding: 0px;

  background-color: #ffffff;
  z-index: 10000000;
}

.footer-button {
  position: absolute;
  top: 50%;
  margin-top: -15px;
}

#button-folder {
  left: 30px;
}

/* #icon-folder-true {
  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
} */
/* png => dropshadow / but drop shadow는 inset 허용 x */

#button-start {
  right: 71px;
  cursor: pointer;
}

#button-stop {
  right: 27px;
  cursor: pointer;
}

.tooltip {
  display: none;
  position: absolute;
  background-color: black;
  border-radius: 7px;
  color: white;
  text-align: center;
  padding-top: 2px;
  padding-bottom: 2px;
  padding-left: 5px;
  padding-right: 5px;
  z-index: 50;
}

.tooltipTitle {
  display: none;
  position: absolute;
  background-color: black;
  border-radius: 7px;
  color: white;
  text-align: center;
  padding-top: 2px;
  padding-bottom: 2px;
  padding-left: 5px;
  padding-right: 5px;
  /* 좌우 대칭을 위한 margin추가, 상위 box의 좌우 padding 차이로 인한 문제  */
  margin-right: 16px;
  z-index: 50;
}

#tooltip-folder {
  left: 20px;
  width: 50px;
}

#tooltip-start {
  right: 55px;
  width: 60px;
}

#tooltip-stop {
  right: 14px;
  width: 60px;
}

.path-area {
  max-height: 100vh;
  opacity: 1;
  transition: max-height 0.5s ease-out, opacity 0.5s ease-out;
  overflow: hidden;
}

.hyperLink {
  display: inline-block;
  cursor: pointer;
  height: auto;
  width: 263px;
}

.path {
  display: flex;
  width: inherit;
  height: 23px;
  transition: width 0.7s ease;
  margin-top: 14px;
  margin-bottom:10px;
  align-items: center;
}

.memoIcon{
  cursor:pointer;
  display: none;
}

#link:hover {
  color: mediumblue;
}


.modal-overlay {
  width: 100%;
  height: 100%;
  position: fixed;
  left: 0;
  top: 0;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  background: rgba(255, 255, 255, 0.25);
  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
  backdrop-filter: blur(1.5px);
  border-radius: 10px;
  border: 1px solid rgba(255, 255, 255, 0.18);
  display: none;
  z-index: 5000;
}

.modal-overlay .modal-window {
  background: #4285F4;
  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
  backdrop-filter: blur(13.5px);
  border-radius: 10px;
  border: 1px solid rgba(255, 255, 255, 0.18);
  width: 200px;
  height: auto;
  position: relative;
  padding: 10px;
}

#confirmModal .modal-window {
  width: 220px;
}

.modal-overlay .title {
  padding-top: 0.5em;
  display: block;
  text-shadow: 1px 1px 2px gray;
  color: white;
  text-align: center;
  font-size: xx-small;
  line-height: 2em;
}

#confirmModal .title {
  padding-top: 1em;
}

.modal-overlay .title b {
  font-size: 13px;
}

.modal-overlay .btn-area {
  display: flex;
  padding-top: 1em;
  justify-content: center;
}

#confirmModal .btn-area {
  padding-top: 2em;
}

.modal-overlay .modalBtn {
  display: inline;
  height: 1.5em;
  cursor: pointer;
  text-shadow: 1px 1px 2px gray;
  color: white;
  padding: 0 1em;
  margin: 0 0.5em;
  background-color: #b1b2b1;
  border-radius: 4px;
  border: none;
}

.modal-overlay .modalBtn:hover {
  background-color: #999a99;
  font-weight: bold;
}

.modal-overlay .content {
  display: flex;
  margin-top: 1em;
  padding: 0px 10px;
  text-shadow: 1px 1px 2px gray;
  color: white;
}

.modal-overlay .content input {
  width: 100%;
  height: 3em;
  border: 0;
  border-radius: 5px;
  outline: none;
  padding: 0 1em;
  background-color: #dedede;
}

.contextmenu {
  display: none;
  position: absolute;
  width: 100px;
  margin: 0;
  padding: 0;
  background: #FFFFFF;
  border-radius: 5px;
  list-style: none;
  box-shadow:
    0 15px 35px rgba(50, 50, 90, 0.1),
    0 5px 15px rgba(0, 0, 0, 0.07);
  overflow: hidden;
  z-index: 999999;
}

.contextmenu li {
  transition: ease .2s;
}

.contextmenu li a {
  display: block;
  height: auto;
  padding: 10px;
  color: gray;
  text-align: center;
  transition: ease .2s;
}

.contextmenu li:hover {
  background: #e8faf6;
}

.contextmenu li:hover a {
  color: #606060;
}

.dir-buttonBox {
  display: flex;
  align-items: center;
}

.dir-link {
  width: 250px;
}

